crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless-if-else_RUF034.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF034 Useless `if`-`else` condition
 --> RUF034.py:5:5
  |
4 | # Invalid
5 | x = 1 if True else 1
  |     ^^^^^^^^^^^^^^^^
6 |
7 | # Invalid
  |

RUF034 Useless `if`-`else` condition
  --> RUF034.py:8:5
   |
 7 | # Invalid
 8 | x = "a" if True else "a"
   |     ^^^^^^^^^^^^^^^^^^^^
 9 |
10 | # Invalid
   |

RUF034 Useless `if`-`else` condition
  --> RUF034.py:11:5
   |
10 | # Invalid
11 | x = 0.1 if False else 0.1
   |     ^^^^^^^^^^^^^^^^^^^^^
