crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless_finally_and_needless_else-2.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
expression: transformed.source_code()
---
# RUF072 removes the empty `finally`, RUF047 removes the empty `else`
# Both fixes apply independently on the same try statement
try:
    foo()
except Exception:
    bar()

# Only the `finally` is empty; `else` has real code
try:
    foo()
except Exception:
    bar()
else:
    baz()
