crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless_finally_and_needless_else_and_suppressible_exception-2.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
expression: transformed.source_code()
---
# All three non-body clauses are no-ops — after all rules converge,
# only `contextlib.suppress(Exception): foo()` remains
import contextlib
with contextlib.suppress(Exception):
    foo()
