crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless_finally_and_needless_else_and_suppressible_exception.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF047 [*] Empty `else` clause
  --> RUF072_RUF047_SIM105.py:7:1
   |
 5 |   except Exception:
 6 |       pass
 7 | / else:
 8 | |     pass
   | |________^
 9 |   finally:
10 |       pass
   |
help: Remove the `else` clause
  |
7 - else:
8 -     pass
  |

RUF072 [*] Empty `finally` clause
  --> RUF072_RUF047_SIM105.py:9:1
   |
 7 |   else:
 8 |       pass
 9 | / finally:
10 | |     pass
   | |________^
help: Remove the `finally` clause
   |
 9 - finally:
10 -     pass
   |
