crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless_finally_and_suppressible_exception-2.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
expression: transformed.source_code()
---
# SIM105 cannot fire while `finally` is non-empty
# RUF072 removes the empty `finally` first, then SIM105 rewrites
# the `try/except: pass` to `contextlib.suppress()` on the next pass
import contextlib
with contextlib.suppress(Exception):
    foo()
