crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__useless_finally_and_suppressible_exception.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF072 [*] Empty `finally` clause
 --> RUF072_SIM105.py:8:1
  |
6 |   except Exception:
7 |       pass
8 | / finally:
9 | |     pass
  | |________^
help: Remove the `finally` clause
   |
 8 - finally:
 9 -     pass
   |
